--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>url shortener</title>
 {% load static %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 <link rel="stylesheet" type="text/css" href="{% static "/css/index.css" %}"
 </head>
 <body>
