--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -14,6 +14,6 @@
         <div id='app'> </div>
     </div>
 
-    <script src="{% static "frontend/main.js" %}"></script>
+    <script src="{% static 'frontend/main.js' %}"></script>
 </body>
 </html>
